# multitasking-ssim

./: .config.example.yml  .gitignore  README.md  pyproject.toml
multitasking_ssim/: calculations.py  cli.py  commands.py  decorators.py  exceptions.py  executors.py  image.py  processor.py
multitasking_ssim/utils/: aio.py  configuration.py  csv.py  exceptions.py  parsers.py  validators.py
